coded by coderSeth fix

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </p>
           </div>
         </div>
-        <div class="coderSeth">Coded by <a href="#">coderSeth</a>.</div>
+        <!-- <div class="coderSeth">Coded by <a href="#">coderSeth</a>.</div> -->
       </div>
     </main>
   </body>
